unpackaged/main/default/objects/OrderApi__Invoice_Installment_Line__c/OrderApi__Invoice_Installment_Line__c.object-meta.xml
<CustomObject>
    <description>Installment Lines hold the detail for an Installment.</description>
    <label>Installment Line</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Installment Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installment Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>