unpackaged/main/default/objects/OrderApi__Invoice_Installment_Line__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <description>This field identifies the remaining balance unpaid for this installment line.</description>
    <inlineHelpText>This field identifies the remaining balance unpaid for this installment line.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>