unpackaged/main/default/objects/OrderApi__Invoice_Installment_Line__c/fields/OrderApi__Installment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Installment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to related Installment</description>
    <inlineHelpText>Linked to related Installment</inlineHelpText>
    <label>Installment</label>
    <referenceTo>OrderApi__Invoice_Installment__c</referenceTo>
    <relationshipLabel>Installment Lines</relationshipLabel>
    <relationshipName>Invoice_Installment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>