unpackaged/main/default/objects/OrderApi__Invoice_Installment_Line__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to related Sales Order Line</description>
    <inlineHelpText>Linked to related Sales Order Line</inlineHelpText>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Installment Lines</relationshipLabel>
    <relationshipName>Invoice_Installment_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>